2008-04-11  Jeremy Chang  <jeremy@openmoko.com>

	* src/e_mod_nav.c: Always show neo_me on the top of its layer. 
	* src/e_nav_item_neo_me.c: Add 'fixed' member in the structure. 
	* src/e_nav_item_neo_me.h: Add fixed set/get API. 
	* src/e_nav_item_location.c, 
	  data/themes/diversity_nav.edc: Change location object's behavior. Show
	text first, then activate the menu.  

2008-04-10  Jeremy Chang  <jeremy@openmoko.com>

	* src/e_mod_nav.c: set free key cb for the hash. 

2008-04-10  Jeremy Chang  <jeremy@openmoko.com>

	* src/e_nav_item_location.c (_e_nav_world_item_cb_del): When location item deleted,
	delete the tag in taglist. 
	* src/e_mod_nav.c: Location Delete issue fixed. strdup
	the key before hash set. 

2008-04-10  Jeremy Chang  <jeremy@openmoko.com>

	* src/e_ctrl.c: Raise buttons panel right after activating the tag list
	* src/e_nav_taglist.c: Selected clear before showing tag list. 

2008-04-10  Jeremy Chang  <jeremy@openmoko.com>

	* src/e_mod_nav.c: Always show neo_me in the center of the screen. 
	* data/config/diversity-nav.cfg: Change the default zoom level, config
	values. 

2008-04-05  Jeremy Chang  <jeremy@openmoko.com>

	* src/e_mod_nav.c (on_geometry_changed),
	                  (on_property_changed): Fix the neo_me latitude
			  value, changing the sign, before saving to config. 

2008-04-05  Jeremy Chang  <jeremy@openmoko.com>

	* src/e_mod_nav.c (on_geometry_changed),
	                  (on_property_changed): Decide if neo_me has
			  existed. If not, create it first. Or it will not
			  show neo_me on map when got fixed and launching
			  diversity-nav first time. This is a bug
			  caused by revision 282. My bad!	
	* src/e_mod_nav.c (on_neo_other_geometry_changed): Add
	on_neo_other_geometry_changed function. It's the behavior for
	neo_other that is not the same with neo_me. 

2008-04-03  Jeremy Chang  <jeremy@openmoko.com>

	* configure.in,
	  data/config,
	  data/config/diversity-nav.cfg,
	  data/config/Makefile.am, 